working on nav bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 :root{
     --bg-black-900:#f2f2fc;
     --bg-black-100:#fdf9ff;
-    --bg-black-500:#e8dfec;
+    --bg-black-50:#e8dfec;
     --text-black-900:#302e4d;
     --text-black-700:#504e70;
 }
@@ -48,6 +48,7 @@ ul{
     padding: 30px;
     height: 100%;
     display: flex;
+    border-right: 1px solid var(--bg-black-50);
     justify-content: center;
     align-items: center;
     z-index: 10;
@@ -91,6 +92,39 @@ ul{
     top: 0;
     right: 0; 
 }
+.aside .nav-toggler{
+    height: 40px;
+    width: 45px;
+    border: 1px solid var(--bg-black-50);
+    cursor: pointer;
+    position: fixed;
+    left: 300px;
+    top: 20px;
+    border-radius: 5px;
+    background: var(--bg-black-100);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.aside .nav-toggler span{
+    height: 2px;
+    width: 18px;
+    background: var(--skin-color);
+    display: inline-block;
+    position: relative;
+
+}
+.aside .nav-toggler span::before{
+    content: '';
+    height: 2px;
+    width: 18px;
+    background: var(--skin-color);
+    position: absolute;
+    top: -6px;
+    left: 0;
+    
+}
+
 .aside .nav{
     margin-top: 50px;
 
@@ -98,5 +132,24 @@ ul{
 
 .aside .nav li{
     margin-bottom: 20px;
+    display: block;
+
+}
+
+.aside .nav li a{
+    font-size: 16px;
+    font-weight: 600;
+    display: block;
+    border-bottom: 1px solid var(--bg-black-50);
+    color: var(--text-black-900);
+    padding: 5px 15px;
+}
+
+.aside .nav li a.active{
+    color: var(--skin-color);
+}
+
+.aside .nav li a i {
+    margin-right: 15px;
 
 }
