added picture working on design

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ ul{
     top: 20px;
     border-radius: 5px;
     background: var(--bg-black-100);
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
 }
@@ -125,6 +125,16 @@ ul{
     
 }
 
+.aside .nav-toggler span::after{
+    content: '';
+    height: 2px;
+    width: 18px;
+    background: var(--skin-color);
+    position: absolute;
+    top: 6px;
+    left: 0;
+    
+}
 .aside .nav{
     margin-top: 50px;
 
