--- a/css/styles.css
+++ b/css/styles.css
@@ -31,13 +31,13 @@ ul{
     background: var(--bg-black-900);
     min-height: 100vh;
     display: block;
-    position: fixed;
-    left: 270px;
     padding: 0 30px;
-    top: 0;
-    right: 0;
-    z-index: 0;
+   
     opacity: 1;
+}
+.main-content{
+    padding-left: 270px;
+    
 }
 .padd-15{
     padding-left: 15px;
@@ -57,6 +57,22 @@ ul{
     margin-left: -15px;
     margin-right: -15px;
     position: relative;
+}
+
+.btn{
+    font-size: 16px;
+    font-weight: 500;
+    padding: 12px 35px;
+    color: white;
+    border-radius: 40px;
+    display: inline-block;
+    white-space: nowrap;
+    border: none;
+    background: var(--skin-color);
+    transition: all 0.3s ease;
+}
+.btn:hover{
+    transform: scale(1.05);
 }
 /* aside */
 .aside{
@@ -90,7 +106,7 @@ ul{
 
 .aside .logo a span{
     font-family: 'Clicker Script', cursive;
-    font-family: 40px;
+    font-size: 40px;
 }
 .aside .logo a::before{
     content: '';
@@ -212,13 +228,39 @@ h3.my-profession{
 .typing{
     color: var(--skin-color);
 }
+.home-info p{
+    margin-bottom: 70px;
+    font-size: 20px;
+    color: var(--text-black-700);
+}
 .home .home-img{
     flex: 0 0 40%;
     max-width: 40%;
     text-align: center;
     position: relative;
+    
+}
+.home-img::after{
+    content: '';
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    
+    right: 20px;
+    bottom: -40px;
+}
+.home-img::before{
+    content: '';
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    
+    left: 20px;
+    top: -40px;
 }
 .home .home-img img{
+    margin: auto;
+    border-radius: 5px;
     height: 400px;
 
 }
