--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,10 @@ ul{
 .btn:hover{
     transform: scale(1.05);
 }
+.btn #email{
+    text-align: center;
+    margin-left: 40%;
+}
 .shadow-dark{
     box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
 }
