--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
 :root {
-  --bg-black-900: #151515;
-  --bg-black-100: #222222;
-  --bg-black-50: #393939;
+  --bg-black-900: #000000;
+  --bg-black-100: #101010;
+  --bg-black-50: #434343;
   --text-black-900: #ffffff;
   --text-black-700: #e9e9e9;
 }
@@ -98,8 +98,8 @@ ul {
 .row {
   display: flex;
   flex-wrap: wrap;
-  /* margin-left: -15px;
-  margin-right: -15px; */
+  margin-left: -15px;
+  margin-right: -15px;
   position: relative;
 }
 
@@ -330,14 +330,15 @@ h3.my-profession {
   color: var(--text-black-700);
 }
 .about .about-content .personal-info {
-  flex: 0 0 50%;
-  max-width: 40%;
+  flex: 
+  0 0 50%;
+  max-width: 50%;
   margin-top: 40px;
   
 }
 .about .about-content .personal-info .info-item {
   flex: 0 0 50%;
-  max-width: 50%;
+  max-width: 55%;
 }
 .about .about-content .personal-info .info-item p {
   font-weight: 600;
