--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
 :root {
- 
-
    --bg-black-900: #f2f2fc;
   --bg-black-100: #fdf9ff;
   --bg-black-50: #e8dfec;
   --text-black-900: #302e4d;
   --text-black-700: #504e70;
 }
-body.light {
+body.dark {
   --bg-black-900: #000000;
   --bg-black-100: #101010;
   --bg-black-50: #434343;
