added new logo picture for the tab It now shows me!!!

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,13 @@ body {
 ul {
   list-style: none;
 }
+
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+}
 .section {
   background: var(--bg-black-900);
   min-height: 100vh;
