SEO and highlighting key words

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,9 @@ ul {
   width: 100%;
   z-index: 100;
 }
+span{
+  color: var(--skin-color);
+}
 .section {
   background: var(--bg-black-900);
   min-height: 100vh;
@@ -327,6 +330,9 @@ h3.my-profession {
   margin-bottom: 15px;
   font-weight: 700;
   color: var(--text-black-900);
+}
+.about .about-content .about-text p span {
+  color: var(--skin-color);
 }
 .about .about-content .about-text h3 span {
   color: var(--skin-color);
